# eqn-gen

./: .gitignore  README.md  estimate_equation.py  pyproject.toml  run_example.py
data/cooling/: README.txt  cooling_data.txt
data/roll/: README.txt  roll_data.txt
data/roll/raw/: README.txt  raw_data.mat
data/silverbox/: README.txt
lib/: README.md  analyze_model.py  create_model.py  evaluate_function.py  fitting_functions.py  format_channel_function.py  model.py  tcn.py  tune_model.py
lib/fcns/: README.md  __init__.py  cubed_1.py  exp_1.py  exp_lin12_2.py  exp_lin21_2.py  linear_3.py  linear_4.py  linear_5.py  poly1_1.py  poly22_2.py  poly2_1.py  poly33_2.py  poly3_1.py  poly44_2.py  poly4_1.py  poly55_2.py  poly5_1.py  sin_1.py  squared_1.py  tanh12_2.py  tanh21_2.py  tanh_1.py  tanhx_1.py
